Fix a broken def of .lqt-drop-zone text-align propery

--- a/lqt.css
+++ b/lqt.css
@@ -462,7 +462,7 @@ table.lqt-new-messages {
 	margin-bottom: 1em;
 	padding: 0.5em 1em;
 	border: 1px solid #999999;
-	text-align: center center;
+	text-align: center;
 	color: #999999;
 }
 
